# CommonDataLayer

./: .gitignore  Cargo.toml  Dockerfile  build.sh  deny.toml
.github/workflows/: mdbook.yml  pr-auto-update.yaml  publish-head.yml  publish.yml  rust-audit.yml  test.yml  testing.yml
api/: Cargo.toml  README.md
api/src/: context.rs  error.rs  main.rs  queries.rs  schema.rs
benchmarking/: Cargo.toml
command-service/: Cargo.toml  sqlx-data.json
command-service/src/output/psql/: error.rs  mod.rs
crates/api/: Cargo.toml
crates/api/src/: config.rs  context.rs  error.rs  events.rs  kafka_events.rs  lib.rs  main.rs  metrics.rs  queries.rs  schema.rs  subscriber.rs
crates/api/src/schema/: context.rs  mod.rs  mutation.rs  query.rs  utils.rs
crates/api/src/types/: schema.rs
crates/cdl-cli/: Cargo.toml
crates/cdl-cli/src/: args.rs  main.rs
crates/cdl-cli/src/actions/: schema.rs
crates/command-service/: Cargo.toml
crates/command-service/src/: main.rs
crates/command-service/src/communication/: mod.rs
crates/command-service/src/input/service/: message_queue.rs
crates/command-service/src/output/druid/: mod.rs
crates/command-service/src/output/psql/: mod.rs
crates/command-service/src/output/victoria_metrics/: mod.rs
crates/data-router/: Cargo.toml
crates/data-router/src/: main.rs
crates/edge-registry/: Cargo.toml
crates/edge-registry/src/: lib.rs  main.rs
crates/leader-elector/: Cargo.toml
crates/leader-elector/src/: main.rs
crates/query-router/: Cargo.toml
crates/query-router/src/: error.rs  handler.rs  main.rs
crates/query-service/: Cargo.toml
crates/query-service-ts/: Cargo.toml
crates/query-service-ts/src/: druid.rs  main.rs  victoria.rs
crates/query-service/src/: main.rs  psql.rs
crates/rpc/: Cargo.toml  build.rs
crates/rpc/proto/: edge_registry.proto  schema_registry.proto
crates/rpc/src/: lib.rs  schema_registry.rs
crates/schema-registry/: .env  Cargo.toml  README.md  sqlx-data.json  start_cockroachdb.sh  stop_cockroachdb.sh
crates/schema-registry/migrations/: 20210215170655_init-db.sql
crates/schema-registry/src/: cache.rs  db.rs  error.rs  lib.rs  main.rs  observable.rs  rpc.rs  types.rs  utils.rs  watcher.rs
crates/schema-registry/src/replication/: master.rs  slave.rs
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  message_types.rs  metrics.rs  status_endpoints.rs
crates/utils/src/messaging_system/: consumer.rs  metadata_fetcher.rs
deployment/compose/: docker-compose.cdl-kafka.yml  docker-compose.cdl.grpc.postgres.yml  docker-compose.cdl.kafka.base.yml  docker-compose.cdl.kafka.postgres.yml  docker-compose.cdl.kafka.victoria-metrics.yml  docker-compose.cdl.rabbitmq.base.yml  docker-compose.cdl.yml  initial-schema.json
deployment/compose/setup/postgres/: 1-edge.sql
deployment/helm/cdl/: values-local.yaml  values.yaml
deployment/helm/cdl/templates/: edge-registry.yml
docs/: benchmarks.md
docs/rfc/: CDLF-00013-00-rfc-01.md  CDLF-00014-00-rfc-01.md  configuration_service.md  materialization.md  protocol_version.md
examples/deploy/: docker-compose.yml
examples/python-cdl/: cdl.py  cdl.sh
frontend/: .gitignore  Cargo.toml  Dockerfile  README.md
frontend/queries/: schema.graphql  schema_history_query.graphql
frontend/src/: context_bus.rs  lib.rs
frontend/src/cdl_objects/: add_schema.rs  all_schemas.rs  mod.rs  update_topic.rs
frontend/src/components/: mod.rs  notification_bar.rs
frontend/src/components/schema_registry/: mod.rs  schema_registry_history.rs
helm/: helmfile.yaml
mnemosyne/: .dockerignore  Cargo.toml  Dockerfile  Makefile.toml
mnemosyne/frontend/: Cargo.toml
mnemosyne/frontend/queries/: .graphqlconfig  all_schemas_query.graphql  schema.graphql  schema_definition_query.graphql
mnemosyne/frontend/src/: cdl_objects.rs  event_bus.rs  graphql.rs  lib.rs  schema_registry.rs
mnemosyne/frontend/src/cdl_objects/: all_schemas.rs  schema_preview.rs
mnemosyne/queries/: add_definition_mut.graphql  add_schema_mut.graphql  schema_preview_query.graphql  update_query_address_mut.graphql  update_topic_mut.graphql
mnemosyne/src/: app_contents.rs  context_bus.rs  lib.rs  main.rs  menu.rs  routes.rs  templates.rs
mnemosyne/src/cdl_objects/: add_definition.rs  add_schema.rs  all_schemas.rs  mod.rs  schema_history.rs  schema_preview.rs  update_query_address.rs  update_topic.rs
mnemosyne/src/components/: index.rs  index_component.rs  menu.rs  mod.rs  notification_bar.rs  schema_registry.rs  schema_registry_add_definition.rs  schema_registry_add_schema.rs  schema_registry_component.rs  schema_registry_edit.rs  schema_registry_history.rs  schema_registry_view.rs  schema_registry_view_component.rs
mnemosyne/src/components/schema_registry/: schema_registry_add_definition.rs  schema_registry_add_schema.rs  schema_registry_edit.rs  schema_registry_history.rs  schema_registry_view.rs
mnemosyne/src/components/schema_registry/schema_registry_list/: mod.rs  row_view.rs
mnemosyne/src/components/schema_registry_list/: mod.rs  row_view.rs
mnemosyne/static/css/: main.less
mnemosyne/templates/: layout.hbs
mnemosyne/www/: index.html
query-service/: Cargo.toml  sqlx-data.json
query-service/src/: psql.rs
rpc/proto/: schema_registry.proto
schema-registry/src/: db.rs  rpc.rs
tests/data/query_router/single/: query_ts.json
