[package]
name = "api"
version = "0.1.0"
authors = ["Sam Mohr <samuel.mohr@hitachi-powergrids.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp        = "0.2"
structopt   = "0.3"
thiserror   = "1.0"
rpc         = { path = "../rpc" }
tokio       = { version = "0.2", default-features = false, features = ["sync", "rt-threaded", "macros"] }
uuid        = { version = "0.8", features = ["v4", "serde"] }
juniper     = { version = "0.15", features = ["uuid"] }
juniper_warp            = "0.6"
