[package]
name = "mnemosyne"
version = "0.1.0"
authors = ["Łukasz Biel <lukasz.p.biel@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.69"
wasm-bindgen-futures = "0.4.19"
yew = "0.17.4"
yewtil = "0.3.2"
uuid = { version = "0.8.1", features = ["serde"] }
serde = { version = "1.0.118", features = ["rc"] }
serde_json = "1.0.61"
graphql_client = "0.9.0"
reqwest = { version = "0.10.10", features = ["json"] }
wee_alloc = "0.4.5"
lazy_static = "1.4.0"
console_log = { version = "0.2", features = ["color"] }
log = "0.4.11"
yew-router = "0.14.0"

[dependencies.web-sys]
version = "0.3.46"
features = [
    "Document",
]
