[package]
name = "api"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

[[bin]]
name = "api"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace
rpc         = { path = "../rpc" }

# Crates.io
env_logger  = "0.8"
juniper     = { version = "0.15", features = ["uuid"] }
num-derive  = "0.3.3"
num-traits  = "0.2.14"
log         = "0.4"
structopt   = "0.3"
thiserror   = "1.0"
futures     = "0.3"
anyhow      = "1.0.38"
tokio       = { version = "0.2", default-features = false, features = ["sync", "rt-threaded", "macros", "time"] }
uuid        = { version = "0.8", features = ["v4", "serde"] }
warp        = "0.2"
juniper_warp            = { version = "0.6", features = ["subscriptions"] }
juniper_graphql_ws      = "0.2.1"
rdkafka     = { version = "0.24", features = ["cmake-build"] }
async-stream            = "0.3.0"
serde       = { version = "1.0.119", features = ["derive"] }
serde_json  = "1.0.61"
reqwest     = { version = "0.10", features = ["json"] }
