[package]
name = "cdl-cli"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "cdl"
path = "src/main.rs"

[dependencies]
# Workspace
rpc         = { path = "../rpc" }

# Crates.io
anyhow      = "1.0"
semver      = { version = "0.11", features = ["serde"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = { version = "1.0" }
structopt   = "0.3"
tokio       = { version = "1.2.0", features = ["macros"] }
tonic       = "0.4.0"
uuid        = { version = "0.8", features = ["v1", "serde"] }
