[package]
name = "edge-registry"
version = "0.1.0"
authors = ["CDL Team"]
edition = "2018"
license = "Apache-2.0"

[[bin]]
name = "edge-registry"
path = "src/main.rs"

[lib]
name = "edge_registry"
path = "src/lib.rs"

[dependencies]
# Workspace
rpc         = { path = "../rpc" }

# Crates.io
serde       = { version = "1.0.124", features = ["derive"] }
serde_json  = "1.0.64"
structopt   = "0.3"
tokio       = { version = "0.2", features = ["rt-threaded", "macros", "sync"] }
tonic       = "0.3"
uuid        = "0.8"
bb8-postgres             = { version = "0.4", features = ["with-uuid-0_8"] }
