[package]
edition = "2018"
authors = ["CDL Team"]
name = "leader-elector"
version = "0.1.0"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "leader-elector"
path = "src/main.rs"

[dependencies]
# Workspace
schema-registry         = { path = "../schema-registry" }

# Crates.io
anyhow      = "1.0"
env_logger  = "0.8"
envy        = "0.4"
futures     = "0.3"
k8s-openapi = { version = "0.11.0", default-features = false, features = ["v1_18"] }
kube        = "0.50.0"
log         = "0.4"
serde       = "1.0"
serde_json  = "1.0"
serde_yaml  = "0.8"
tokio       = { version = "1.2.0", features = ["rt"] }
futures-util            = "0.3"
