[package]
name = "utils"
authors = ["CDL Team"]
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "utils"
path = "src/lib.rs"

[dependencies]
anyhow      = "1.0"
async-trait = "0.1"
hyper       = "0.14.4"
lapin       = "1.4"
lazy_static = "1.4"
log         = "0.4"
metrics     = { version = "0.14.1", features = ["std"] }
rdkafka     = { version = "0.25.0", features = ["cmake-build"] }
serde       = { version = "1.0", features = ["derive"] }
serde_json  = { version = "1.0", features = ["raw_value"] }
structopt   = "0.3"
thiserror   = "1.0"
tokio       = { version = "1.2.0", features = ["rt"] }
tokio-amqp  = "1.0.0"
uuid        = { version = "0.8", features = ["v1", "serde"] }
async-stream            = "0.3"
futures-util            = "0.3"
tonic                   = "0.4.0"
metrics-exporter-prometheus         = { version = "0.3.0", features=["tokio-exporter"] }

[dev-dependencies]
test-case = "1.1"
